--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  background-color: rgb(16, 1, 1);
-  color: antiquewhite;
+    background-color: rgb(16, 1, 1);
+    color: antiquewhite;
 }
 
 .header-div {
@@ -18,21 +18,35 @@ body {
 }
 
 #top-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
 
 #top-container img {
-  width: 375px;
+    width: 375px;
+    animation: blink 0.1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.8;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 #form-div {
-  text-align: center;
-  width:400px;
-  display: flex;
-  flex-direction: column;
+    text-align: center;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
 }
 
 #submission-form {
@@ -60,13 +74,12 @@ body {
 }
 
 #printed-answer-div {
-   width: 60%;
-   text-align: center;
-   display: flex;
+    width: 60%;
+    text-align: center;
+    display: flex;
 }
 
 #printed-answer {
-  
 }
 
 .hidden {
