--- a/css/styles.css
+++ b/css/styles.css
@@ -32,13 +32,19 @@ body {
 
 @keyframes blink {
     0% {
-        opacity: 1;
+        opacity: 0.7;
     }
+
+    25%{
+        opacity: .8;
+    }
+
     50% {
-        opacity: 0.8;
+        opacity: .8;
     }
+
     100% {
-        opacity: 1;
+        opacity: 0.6;
     }
 }
 
