--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ body {
     background-color: rgb(255, 255, 255);
     color: rgb(7, 7, 7);
     padding: 10px;
+    margin: 5px;
     border: none;
     border-radius: 20px;
     box-shadow: 0px 0px 2px 2px rgb(0, 0, 0);
