--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,11 @@
 
 body {
     background-color: rgb(16, 1, 1);
-    color: antiquewhite;
-    
-    
+    color: rgba(222, 237, 239, 0.775);
 }
 
 .header-div {
-    font-family: 'Righteous', cursive;
+    font-family: "Righteous", cursive;
     padding: 15px;
     height: 80px;
     display: flex;
@@ -58,23 +56,30 @@ body {
     flex-direction: column;
 }
 
-#submission-form {
-    background-color: rgba(172, 213, 199, 0.451);
-    border-radius: 10px 25px 10px 25px;
-    text-align: center;
-    padding: 10px;
+#form-div p {
+    margin: 25px;
 }
 
+#submission-form {
+    text-align: center;
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 0 0 15px 4px rgb(209, 182, 182);
+}
+
+
+
 #submission-form select {
-    background-color: rgb(108, 133, 125);
-    color: white;
+    background-color: rgb(0, 0, 0);
+    color: rgb(209, 182, 182);
     border: none;
     border-radius: 5px;
     box-shadow: 0px 0px 2px 2px rgb(57, 70, 65);
+    margin-top: 10px;
 }
 
-#submission-form button {
-    background-color: rgb(255, 255, 255);
+button {
+    background-color: rgba(255, 255, 255, 0.678);
     color: rgb(7, 7, 7);
     padding: 10px;
     margin: 5px;
@@ -83,20 +88,13 @@ body {
     box-shadow: 0px 0px 2px 2px rgb(0, 0, 0);
 }
 
-/* #printed-answer-div {
-    width: 80%;
-    padding: 10px;
-    margin: 10px;
-} */
-
 #printed-answer-div {
-    color: rgb(131, 88, 88);
     text-align: center;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-     padding: 10px;
+    padding: 10px;
     margin: 10px;
 }
 
