--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 }
 
 #top-container img {
-    width: 375px;
+    width: 70%;
     animation: blink 0.1s;
     animation-iteration-count: infinite;
 }
@@ -50,7 +50,7 @@ body {
 
 #form-div {
     text-align: center;
-    width: 400px;
+    width: 30%;
     display: flex;
     flex-direction: column;
 }
