--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ body {
     border-radius: 5px;
     box-shadow: 0px 0px 2px 2px rgb(57, 70, 65);
     margin-top: 10px;
+    cursor: pointer;
 }
 
 button {
@@ -85,6 +86,7 @@ button {
     border: none;
     border-radius: 20px;
     box-shadow: 0px 0px 2px 2px rgb(0, 0, 0);
+    cursor: pointer;
 }
 
 #printed-answer-div {
